# learn-to-code

.devcontainer/: devcontainer.json
Hausaufgaben/: Notendurchschnitt  Notendurchschnitt.c  Prozentberechnung  Prozentberechnung.c
Hausaufgaben/Hausaufgabe_1.3/: Pointerswap.c  Student_Struct.c
Hausaufgaben/Hausaufgabe_1.4/: Grades_Average.c  Schaltjahre.c
Hausaufgaben/Hausaufgabe_1.4/Student_Struct/: CMakeCache.txt  CMakeLists.txt  Makefile  Student.c  cmake_install.cmake  student_struct_exec
Hausaufgaben/Hausaufgabe_1.5/: Dezimal_Binaer.c  Dreieck.c  dreieck_funktionen.h
Hausaufgaben_2/Hausaufgabe_2.1/: CMakeLists.txt
Hausaufgaben_2/Hausaufgabe_2.1/include/: student.h
Hausaufgaben_2/Hausaufgabe_2.1/src/: main_2.1.cpp  student.cpp
Hausaufgaben_2/Hausaufgabe_2.1/test/: test_student_struct.cpp
Hausaufgaben_2/Hausaufgabe_2.3/: CMakeLists.txt  CMakeeeeeeeLists.txt
Hausaufgaben_2/Hausaufgabe_2.3/include/: animal_class.h
Hausaufgaben_2/Hausaufgabe_2.3/src/: animal_class.cpp  main_2.3.cpp
Hausaufgaben_2/Hausaufgabe_2.3/test/: test_animal_class.cpp
Theoriephase2/Uebungen/: CMakeLists.txt  Class.cpp  CvPlot.cpp  HelloWorld.cpp  Vererbung.cpp  a.out  canny_edges.cpp  dynamischer_Speicher.c  dynamischer_Speicher.cpp  exceptions.cpp  hello_world.cpp  polymorphism.cpp  struct.cpp  templates.cpp
Uebungen/: CMakeCache.txt  CMakeLists.txt  Makefile  Makros.c  Pointer  Pointer.c  Structures  Structures.c  cmake  cmake.c  cmake_example_exec  cmake_install.cmake  run_cmake.sh
Übungen/: Structures  Structures.c
